Add first statistic resource
